--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@svgr/rollup": "^8.1.0",
     "@types/styled-components": "^5.1.34",
+    "@vibrant/core": "^3.2.1-alpha.1",
+    "axios": "^1.7.7",
+    "colorthief": "^2.6.0",
+    "cookie": "^0.6.0",
+    "node-vibrant": "^3.2.1-alpha.1",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "svgr": "^1.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
